syntax  = "proto3";

option go_package = "github.com/nguyentrunghieu15/redis-example/chat_proto";

message Client {
    string id = 1;
}

message ClientMessage {
    string id = 1;
    string message = 2;
}

service ChatService {
    rpc ReqJoinChat (Client) returns (Client);
    rpc ClientChat(stream ClientMessage) returns (Client);
    rpc ServerChat(Client) returns (stream ClientMessage);
}